fixes alignments and adds error catches for comments

--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -112,7 +112,7 @@
     @include desktop {
         max-width: 67rem;
         padding: 0;
-        margin: 0 auto;
+        margin: 2rem auto 0 auto;
     }
 
     @include desktop {
@@ -147,6 +147,7 @@
 
         @include tablet {
             display: flex;
+            // justify-content: space-between;
         }
         
         @include desktop {
@@ -156,21 +157,23 @@
     }
 
     &__date {
-        flex-basis: 30%;
+        @include tablet {
+            flex-basis: 30%;
+            // margin-right: 29.5%;
+        }
         @include desktop {
-            flex-basis: calc(75% - 16rem);
+            margin-right: 0;
+            flex-basis: calc(70% - 17.75rem);
         }
     }
 
     &__venue {
-        flex-basis: 20%;
-        @include desktop {
-            flex-basis: 13rem;
+        @include tablet {
+            flex-basis: 20%;
         }
-    }
-
-    &__location {
-        flex-basis: 50%;
+        @include desktop {
+            flex-basis: 10.25rem;
+        }
     }
 
     &__container {
@@ -212,7 +215,9 @@
     &__date {
         padding-bottom: 1rem;
         font-weight: 600;
-        flex-basis: 30%;
+        @include tablet {
+            flex-basis: 30%;
+        }
         @include desktop {
             flex-basis: calc(75% - 17.5rem);
         }
@@ -220,7 +225,9 @@
 
     &__venue {
         padding-bottom: 1rem;
-        flex-basis: 20%;
+        @include tablet {
+            flex-basis: 20%;
+        }
         @include desktop {
             flex-basis: 12rem;
         }
@@ -228,7 +235,9 @@
 
     &__location {
         padding-bottom: 1rem;
-        flex-basis: 25%;
+        @include tablet {
+            flex-basis: 30%;
+        }
     }
 
     &__button {
